--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SmartEnergySolutions-Backend
-spring.datasource.url=jdbc:mysql://localhost:3306/solar_system?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
